restructured and created CLI

--- a/upstart_template.conf
+++ b/upstart_template.conf
@@ -1,4 +1,4 @@
-description "washplant - csv export worker"
+description "%APP_NAME%"
 author      "Sprocket http://www.rafflecopter.com"
 
 # used to be: start on startup
@@ -15,9 +15,9 @@ script
     export HOME="/home/app-data"
     export NODE_ENV=production
 
-    chdir /var/builds/live/washplant/washplant 
+    chdir /var/builds/live/%APP_NAME%/%APP_NAME% 
 
-    exec node /var/builds/live/washplant/washplant/service.js >> /var/log/washplant-live.log 2>&1
+    exec node /var/builds/live/%APP_NAME%/%APP_NAME%/service.js >> /var/log/%APP_NAME%-live.log 2>&1
 end script
 
 post-start script
