correct start on trigger in upstart conf

--- a/upstart_template.conf
+++ b/upstart_template.conf
@@ -3,7 +3,8 @@ author      "Sprocket http://www.rafflecopter.com"
 
 # used to be: start on startup
 # until we found some mounts weren't ready yet while booting:
-start on started mountall
+# start on started mountall <-- doesn't seem to work
+start on filesystem and net-device-up IFACE!=lo
 stop on shutdown
 
 # Automatically Respawn:
